# agent-activity-graph

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  demo-scenario.md  release-summary.md  review-readiness-benchmark.md  review-readiness-spec.md  thesis.md
examples/traces/: README.md  mcp_same_day_payment_review.json  ollama_local_invoice_review.json  openai_agents_invoice_review.json  openai_human_in_the_loop_invoice_reject.json
scripts/: generate_assets.py  generate_local_trace.py  generate_review_readiness_benchmark.py  ingest_trace.py  review_readiness.py
src/agent_activity_graph/: __init__.py  main.py
src/agent_activity_graph/api/: __init__.py  app.py  routes.py
src/agent_activity_graph/db/: __init__.py  models.py  repository.py  session.py
src/agent_activity_graph/demo/: __init__.py  local_trace.py  scenarios.py  seed.py
src/agent_activity_graph/graph/: __init__.py  builder.py  queries.py
src/agent_activity_graph/policy/: __init__.py  evaluator.py  rules.py
src/agent_activity_graph/replay/: __init__.py  evidence_pack.py  incident.py  timeline.py
src/agent_activity_graph/review/: __init__.py  benchmark.py  cases.py  readiness.py
src/agent_activity_graph/sdk/: __init__.py  client.py  events.py  trace_adapter.py
src/agent_activity_graph/ui/: __init__.py  views.py
tests/: conftest.py  test_demo_scenario.py  test_events.py  test_evidence_pack.py  test_graph.py  test_hardening.py  test_local_trace.py  test_policy.py  test_replay.py  test_review_readiness.py  test_trace_ingestion.py  test_ui.py
(+11 files in other folders)
