[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-activity-graph"
version = "0.1.0"
description = "Runtime evidence for agentic enterprise workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "networkx>=3.3,<4.0",
  "pydantic>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.52.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
